// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should successfully create a coordinate viewer component 1`] = `
<div
  class="coordinate-viewer css-0"
  data-theme="light"
>
  <p
    class="chakra-text coordinate-viewer-text css-0"
    data-theme="light"
  />
</div>
`;

exports[`should successfully create a coordinate viewer component with additional css classes and box properties 1`] = `
<div
  class="coordinate-viewer test css-sz63p1"
  data-theme="light"
>
  <p
    class="chakra-text coordinate-viewer-text css-0"
    data-theme="light"
  />
</div>
`;
